styles/styles.css
/* ... */
/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .button--secondary:hover,
.redesign-v2 .button--secondary:focus {
  background-color: var(--button-tertiary-white-hover);
  border-color: var(--button-tertiary-white-border-hover);
}

.redesign-v2 .button--secondary:active {
  background-color: var(--button-tertiary-white-pressed);
  border-color: #d9d9d9;
}

/* Section Background colors */
.redesign-v2 .section--black-background,
.redesign-v2 .section--graphite-background,
.redesign-v2 .section--gray-background,
.redesign-v2 .section--light-gray-background,
.redesign-v2 .section--with-background {
  --card-background: var(--c-primary-white);
  --card-text: var(--c-primary-black);

  color: var(--text-color);
  background-color: var(--section-background);
  z-index: 1;
}

.redesign-v2 .section--black-background,
.redesign-v2 .section--graphite-background {
  --navigation-line-default-color: #393939;
  --text-color: var(--c-primary-white);
  --color-icon: var(--c-primary-white);
  --text-subtle: #8D8D8D;
}

.redesign-v2 .section--black-background {
  --section-background: var(--c-primary-black);
}

.redesign-v2 .section--graphite-background {
  --section-background: var(--c-secondary-graphite);
}

.redesign-v2 .section--gray-background,
.redesign-v2 .section--light-gray-background {
  --navigation-line-default-color: var(--c-primary-white);
  --text-color: var(--c-primary-black);
  --text-subtle: #636363;
}

.redesign-v2 .section--gray-background {
  --section-background: var(--c-secondary-silver);
}

.redesign-v2 .section--light-gray-background {
  --section-background: var(--c-tertiary-light-cool-gray);
}

.redesign-v2 .section--background-with-dots {
  position: relative;
  z-index: 1;
}

.redesign-v2 .section--background-with-dots::after {
  background-image: url("../../media/dots.svg");
  background-position: top right 10px;
  bottom: 0;
  content: "";
  display: block;
  height: 60%;
  height: round(60%, 24px);
  width: 40%;
  width: round(40%, 24px);
  position: absolute;
  right: 0;
  z-index: 1;
}

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section--background-with-dots > div {
  position: relative;
  z-index: 2;
}

.redesign-v2 .section--with-background {
  --text-color: var(--c-primary-white);

  aspect-ratio: 2 / 1;
  color: var(--text-color);
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: var(--section-max-width);
  position: relative;
}

.redesign-v2 .section--with-background .default-content-wrapper {
  background-color: var(--c-secondary-graphite);
}

.redesign-v2 .section--with-background > picture:first-of-type img {
  display: block;
  height: 100%;
  object-fit: cover;
  width: 100%;
}

/* End section Background colors */

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section {
  padding: var(--section-padding-top) 0 var(--section-padding-bottom);
  scroll-margin-top: calc(var(--nav-height) + var(--inpage-navigation-height));
  display: flex;
  flex-flow: column;
  gap: var(--section-gap);
}

.redesign-v2 .section--no-gap,
.redesign-v2 .v2-icon-cards-container {
  gap: 0;
}

.redesign-v2 .section--no-vertical-padding {
  --section-padding-top: 0;
  --section-padding-bottom: 0;
}

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section > div {
  padding: var(--section-div-padding);
  max-width: var(--wrapper-width);
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

/* Remove padding top of consecutive sections with background image or colors */
.redesign-v2:not:has(main.error) .section:first-child,
.redesign-v2 .v2-testimonial-container,
.redesign-v2 .v2-feature-carousel-container,
.redesign-v2 .v2-intro-section-container,
.redesign-v2 .section + .section--with-background,
.redesign-v2 .section--light-gray-background:has(.v2-pencil-promo__pencil-banner),
.redesign-v2 .section--gray-background:has(.v2-pencil-promo__pencil-banner),
.redesign-v2 .section--graphite-background:has(.v2-pencil-promo__pencil-banner),
.redesign-v2 .section--black-background:has(.v2-pencil-promo__pencil-banner) {
  --section-padding-top: 0;
}

/* stylelint-disable-next-line no-descending-specificity */
.redesign-v2 .section--with-background,
.redesign-v2 .v2-feature-carousel-container,
.redesign-v2 .v2-intro-section-container,
.redesign-v2 .v2-testimonial-container {
  --section-padding-bottom: 0;
}

/* Prevent padding in blocks that contain multiple sections */
/* stylelint-disable-next-line no-descending-specificity */
.section:has(+ .v2-truck-lineup-container, + .v2-tabbed-carousel-wrapper) {
  padding-bottom: 0;
}

/* Prevent margins for first and last element of a text */
.redesign-v2 .section > div.default-content-wrapper > *:first-child {
  margin-top: 0;
}

.redesign-v2 .section > div.default-content-wrapper > *:last-child {
  margin-bottom: 0;
}

/* END Prevent margins for first and last element of a text */

.redesign-v2 .section > .full-width {
  padding: 0;
  margin: 0;
  width: 100%;
  max-width: 100%;
}

.section.header-with-mark > .default-content-wrapper > h1:first-child,
.section.header-with-mark > .default-content-wrapper > h2:first-child,
.redesign-v2 .with-marker {
  padding-top: 18px;
}

.section.header-with-mark > .default-content-wrapper > h1:first-child::before,
.section.header-with-mark > .default-content-wrapper > h2:first-child::before,
.redesign-v2 .with-marker::before {
  content: "";
  margin: 0;
  height: 0;
  width: 45px;
  border-bottom: 4px solid var(--c-accent-red);
  display: block;
  position: relative;
  top: -18px;
}

.redesign-v2 a.standalone-link {
  align-items: center;
  color: var(--c-primary-black);
  display: inline-flex;
  font-family: var(--ff-subheadings-medium);
  font-size: var(--button-font-size);
  gap: 4px;
  letter-spacing: 1.12px;
  line-height: var(--button-line-height);
  background: transparent;
}
/* ... */

